samples/_failures_safe/1761267155_0319f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6105fafb.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_6105fafb.c:135:56: error: expected ‘)’ at end of input
  135 |                    analyzer->entries[i].level, analyzer
      |                                                        ^
      |                                                        )
./samples/SAFE/__tmp_6105fafb.c:134:19: note: to match this ‘(’
  134 |             printf("[%s] %s: %s\n", analyzer->entries[i].timestamp,
      |                   ^
./samples/SAFE/__tmp_6105fafb.c:135:20: error: expected declaration or statement at end of input
  135 |                    analyzer->entries[i].level, analyzer
      |                    ^~~~~~~~
./samples/SAFE/__tmp_6105fafb.c:135:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6105fafb.c:135:20: error: expected declaration or statement at end of input
